force-app/main/default/objects/Student_Enrollment__c/fields/Enrollment_Key__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Key__c</fullName>
    <label>Enrollment Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>