force-app/main/default/objects/Student_Enrollment__c/fields/Final_Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Payable_Amount__c</fullName>
    <formula>Course__r.Course_Fee__c * (1 - (Discount_Percentage__c / 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Payable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>